k8s_deployments/currency-conversion-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-conversion-api
spec:
  type: NodePort
  selector:
    app: currency-conversion-api
  ports:
    - nodePort: 30111
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-conversion-api
  labels:
    app: currency-conversion-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currency-conversion-api
  template:
    metadata:
      labels:
        app: currency-conversion-api
    spec:
      containers:
        - name: currency-conversion-api
          image: currency-conversion-api:1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60  
            periodSeconds: 30
