k8s_deployments/employee-api-db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-api-db
spec:
  selector:
    app: employee-api-db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-api-db
  template:
    metadata:
      labels:
        app: employee-api-db
    spec:
      containers:
        - name: employee-api-db
          image: postgres:12.2-alpine
          ports:
            - containerPort: 5432
