k8s_deployments/employee-api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-api
  labels:
    app: employee-api
spec:
  selector:
    app: employee-api
  ports:
    - port: 8080
      name: http-traffic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
  labels:
    app: employee-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-api
  template:
    metadata:
      labels:
        app: employee-api
    spec:
      containers:
        - name: employee-api
          image: employee-api:1
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 45
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
