k8s_deployments/smtp-server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp-server
  labels:
    app: smtp-server
spec:
  selector:
    app: smtp-server
  ports:
    - port: 25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp-server
  template:
    metadata:
      labels:
        app: smtp-server
    spec:
      containers:
        - name: smtp-server
          image: smtp-server:1
          ports:
            - containerPort: 25
